Make code review changes

--- a/templates/openstack/pricing-calculator.html
+++ b/templates/openstack/pricing-calculator.html
@@ -21,9 +21,11 @@
 </section>
 
 <section class="p-strip--light">
+  <div class="u-fixed-width">
+    <h2>Private cloud pricing calculator</h2>
+  </div>
   <div class="row">
     <div class="col-7">
-      <h2>Private cloud pricing calculator</h2>
       <h3 class="p-heading--4">Should your workloads run in a public or private cloud?</h3>
       <p>Depending on your requirements, overall CapEx and OpEx costs and cost-per-resource metrics, it may be more economical to run your workloads in the private cloud. Use the following private cloud pricing calculator to estimate the costs of running your instances in the <a href="/openstack">Charmed OpenStack</a> private cloud. And see how much you can save compared to the public clouds.</p>
     </div>
