Add PropTypes to CostCalculations component

--- a/templates/openstack/pricing-calculator.html
+++ b/templates/openstack/pricing-calculator.html
@@ -37,13 +37,13 @@
   </div>
 
   <div class="u-fixed-width">
-    <hr class="p-separator">
+    <hr class="p-separator" style="margin-bottom: 2rem;">
   </div>
 
   <div id="cost-calculator-section"></div>
 
   <div class="u-fixed-width">
-    <hr class="p-separator" style="margin-bottom: 2rem;">
+    <hr class="p-separator" style="margin-bottom: 2rem; margin-top: 2rem;">
   </div>
 
   <div class="u-fixed-width">
