Update pricing calculator contact form

--- a/templates/openstack/pricing-calculator.html
+++ b/templates/openstack/pricing-calculator.html
@@ -32,7 +32,7 @@
     <div class="col-5 p-card">
       <p class="p-heading--5">Have non-standard requirements?</p>
       <p>Tell us more about your specific needs here - we will send you a detailed report and help you find the cloud architecture that best suits your requirements.</p>
-      <a class="js-invoke-modal" href="">Get cost estimates</a>
+      <a class="js-invoke-modal p-button--positive" href="/openstack/contact-us">Get cost estimates</a>
     </div>
   </div>
 
