Fix nested rows and cols

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -1052,7 +1052,14 @@ html {
   scroll-behavior: smooth;
 }
 
+//tco calculatior
 .tco-tooltip {
   margin-bottom: 0.5rem;
   margin-left: 0.5rem;
+}
+
+.tco-input {
+  @media (min-width: $breakpoint-medium) {
+    max-width: 10rem;
+  }
 }
