--- a/templates/openstack/pricing-calculator.html
+++ b/templates/openstack/pricing-calculator.html
@@ -40,14 +40,13 @@
     <hr class="p-separator" style="margin-bottom: 2rem;">
   </div>
 
-  <div id="cost-calculator-section"></div>
+  <div id="cost-calculator-section" class="u-sv3"></div>
 
   <div class="u-fixed-width">
-    <hr class="p-separator" style="margin-bottom: 2rem; margin-top: 2rem;">
-  </div>
-
-  <div class="u-fixed-width">
-    <p><small>NOTE: The private cloud pricing calculator is for informational purposes only. Exact prices may vary depending on your detailed requirements, cloud configuration and local cost conditions. The hourly cost per instance contains all CapEx and OpEx costs over a three-year period, including reference hardware, typical hosting charges, average operations staff salary costs, cloud delivery and support subscriptions. The total savings are calculated compared to the reference AWS EC2 pricing for on-demand t3a type instances. In case of any questions, get in touch with our experts.</small></p>
+    <div class="p-notification--information">
+      <p class="p-notification__response" role="status">
+        <span class="p-notification__status">NOTE: The private cloud pricing calculator is for informational purposes only. Exact prices may vary depending on your detailed requirements, cloud configuration and local cost conditions. The hourly cost per instance contains all CapEx and OpEx costs over a three-year period, including reference hardware, typical hosting charges, average operations staff salary costs, cloud delivery and support subscriptions. The total savings are calculated compared to the reference AWS EC2 pricing for on-demand t3a type instances. In case of any questions, get in touch with our experts.</span>
+    </div>
   </div>
 </section>
 
