--- a/static/sass/_pattern_buttons.scss
+++ b/static/sass/_pattern_buttons.scss
@@ -5,7 +5,7 @@
   }
 
   .p-button--tag {
-    @extend %p-button-light !optional;
+    @extend %p-button-light;
 
     border-radius: 3px;
     color: $color-mid-dark;
